<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/main_textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/home_title"
        android:textSize="20sp"
        android:background="@drawable/background_border" />

    <Button
        android:id="@+id/addDeck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_textView1"
        android:gravity="center"
        android:layout_marginTop="23dp"
        android:text="@string/button_addDeck"
        android:onClick="addDeck" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addDeck"
        android:layout_alignRight="@+id/addDeck"
        android:layout_below="@+id/addDeck"
        android:layout_marginTop="31dp"
        android:background="@drawable/background_border"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scroll_test1"
                android:textSize="20sp" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/scroll_test2"
                android:textSize="20sp" />
            
        </LinearLayout>
    </ScrollView>

</RelativeLayout>